--- a/iindex.html
+++ b/iindex.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="WIN_20210124_19_34_26_Pro.jpg" alt="" width="30" height="24" class="d-inline-block align-top">
-        Bootstrap
+        Aman:Developer
       </a>
     </div>
   </nav>
